W-10671678: update dialect & vocabularies with GraphQL models

--- a/vocabulary/src/main/resources/dialects/canonical_webapi_spec.yaml
+++ b/vocabulary/src/main/resources/dialects/canonical_webapi_spec.yaml
@@ -329,6 +329,112 @@ nodeMappings:
         allowMultiple: true
 
 
+  AbstractOperation:
+    classTerm: core.Operation
+    mapping:
+      name:
+        propertyTerm: core.name
+        range: string
+      description:
+        propertyTerm: core.description
+        range: string
+      expects:
+        propertyTerm: core.expects
+        range: AbstractRequest
+        allowMultiple: true
+      returns:
+        propertyTerm: core.returns
+        range: AbstractResponse
+        allowMultiple: true
+      designAnnotations:
+        propertyTerm: doc.designAnnotation
+        range: DomainExtension
+        allowMultiple: true
+
+
+  AbstractParameter:
+    classTerm: core.Parameter
+    mapping:
+      name:
+        propertyTerm: core.name
+        range: string
+      paramName:
+        propertyTerm: core.paramName
+        range: string
+      binding:
+        propertyTerm: core.binding
+        range: string
+      description:
+        propertyTerm: core.description
+        range: string
+      required:
+        propertyTerm: core.required
+        range: boolean
+      schema:
+        propertyTerm: raml-shapes.schema
+        range: DataShapesUnion
+      designLink:
+        propertyTerm: doc.design-link-target
+        range: link
+      designAnnotations:
+        propertyTerm: doc.designAnnotation
+        range: DomainExtension
+        allowMultiple: true
+
+
+  AbstractPayload:
+    classTerm: core.Payload
+    mapping:
+      name:
+        propertyTerm: core.name
+        range: string
+      schema:
+        propertyTerm: raml-shapes.schema
+        range: DataShapesUnion
+      mediaType:
+        propertyTerm: core.mediaType
+        range: string
+      examples:
+        propertyTerm: apiContract.examples
+        range: Example
+        allowMultiple: true
+      designLink:
+        propertyTerm: doc.design-link-target
+        range: link
+      designAnnotations:
+        propertyTerm: doc.designAnnotation
+        range: DomainExtension
+        allowMultiple: true
+
+
+  AbstractRequest:
+    classTerm: core.Request
+    mapping:
+      parameter:
+        propertyTerm: core.parameter
+        range: AbstractParameter
+        allowMultiple: true
+      designAnnotations:
+        propertyTerm: doc.designAnnotation
+        range: DomainExtension
+        allowMultiple: true
+
+
+  AbstractResponse:
+    classTerm: core.Response
+    mapping:
+      name:
+        propertyTerm: core.name
+        range: string
+      payload:
+        propertyTerm: core.payload
+        range: AbstractPayload
+      designAnnotations:
+        propertyTerm: doc.designAnnotation
+        range: DomainExtension
+        allowMultiple: true
+
+
   Amqp091ChannelBinding:
     classTerm: apiBinding.Amqp091ChannelBinding
     extends: ChannelBinding
@@ -1297,6 +1403,9 @@ nodeMappings:
     classTerm: shacl.NodeShape
     extends: AnyShape
     mapping:
+      isAbstract:
+        propertyTerm: raml-shapes.isAbstract
+        range: boolean
       minProperties:
         propertyTerm: raml-shapes.minProperties
         range: integer
@@ -1347,6 +1456,13 @@ nodeMappings:
       unevaluatedPropertiesSchema:
         propertyTerm: raml-shapes.unevaluatedPropertiesSchema
         range: DataShapesUnion
+      supportedOperation:
+        propertyTerm: raml-shapes.supportedOperation
+        range: ShapeOperation
+        allowMultiple: true
+      inputOnly:
+        propertyTerm: raml-shapes.inputOnly
+        range: boolean
 
 
   OAuth1Settings:
@@ -1432,6 +1548,7 @@ nodeMappings:
 
   Operation:
     classTerm: apiContract.Operation
+    extends: AbstractOperation
     mapping:
       extends:
         propertyTerm: doc.extends
@@ -1446,12 +1563,6 @@ nodeMappings:
     
       method:
         propertyTerm: apiContract.method
-        range: string
-      name:
-        propertyTerm: core.name
-        range: string
-      description:
-        propertyTerm: core.description
         range: string
       deprecated:
         propertyTerm: core.deprecated
@@ -1510,10 +1621,6 @@ nodeMappings:
       designLink:
         propertyTerm: doc.design-link-target
         range: link
-      designAnnotations:
-        propertyTerm: doc.designAnnotation
-        range: DomainExtension
-        allowMultiple: true
 
 
   OperationBinding:
@@ -1572,15 +1679,10 @@ nodeMappings:
 
   Parameter:
     classTerm: apiContract.Parameter
+    extends: AbstractParameter
     mapping:
-      name:
-        propertyTerm: core.name
-        range: string
       paramName:
         propertyTerm: apiContract.paramName
-        range: string
-      description:
-        propertyTerm: core.description
         range: string
       required:
         propertyTerm: apiContract.required
@@ -1603,9 +1705,6 @@ nodeMappings:
       binding:
         propertyTerm: apiContract.binding
         range: string
-      schema:
-        propertyTerm: raml-shapes.schema
-        range: DataShapesUnion
       payload:
         propertyTerm: apiContract.payload
         range: Payload
@@ -1613,13 +1712,6 @@ nodeMappings:
       examples:
         propertyTerm: apiContract.examples
         range: Example
-        allowMultiple: true
-      designLink:
-        propertyTerm: doc.design-link-target
-        range: link
-      designAnnotations:
-        propertyTerm: doc.designAnnotation
-        range: DomainExtension
         allowMultiple: true
 
 
@@ -1672,33 +1764,14 @@ nodeMappings:
 
   Payload:
     classTerm: apiContract.Payload
+    extends: AbstractPayload
     mapping:
-      name:
-        propertyTerm: core.name
-        range: string
-      mediaType:
-        propertyTerm: core.mediaType
-        range: string
       schemaMediaType:
         propertyTerm: apiContract.schemaMediaType
         range: string
-      schema:
-        propertyTerm: raml-shapes.schema
-        range: DataShapesUnion
-      examples:
-        propertyTerm: apiContract.examples
-        range: Example
-        allowMultiple: true
       encoding:
         propertyTerm: apiContract.encoding
         range: Encoding
-        allowMultiple: true
-      designLink:
-        propertyTerm: doc.design-link-target
-        range: link
-      designAnnotations:
-        propertyTerm: doc.designAnnotation
-        range: DomainExtension
         allowMultiple: true
 
 
@@ -1771,8 +1844,13 @@ nodeMappings:
 
   Request:
     classTerm: apiContract.Request
-    extends: Message
+    extends: AbstractRequest
     mapping:
+      extends:
+        propertyTerm: doc.extends
+        range: Message
+        allowMultiple: true
+    
       required:
         propertyTerm: apiContract.required
         range: boolean
@@ -1791,6 +1869,59 @@ nodeMappings:
         propertyTerm: apiContract.cookieParameter
         range: Parameter
         allowMultiple: true
+      name:
+        propertyTerm: core.name
+        range: string
+      description:
+        propertyTerm: core.description
+        range: string
+      payload:
+        propertyTerm: apiContract.payload
+        range: Payload
+        allowMultiple: true
+      correlationId:
+        propertyTerm: core.correlationId
+        range: CorrelationId
+      displayName:
+        propertyTerm: core.displayName
+        range: string
+      title:
+        propertyTerm: core.title
+        range: string
+      summary:
+        propertyTerm: core.summary
+        range: string
+      header:
+        propertyTerm: apiContract.header
+        range: Parameter
+        allowMultiple: true
+      binding:
+        propertyTerm: apiBinding.binding
+        range: MessageBindings
+      tag:
+        propertyTerm: apiContract.tag
+        range: Tag
+        allowMultiple: true
+      examples:
+        propertyTerm: apiContract.examples
+        range: Example
+        allowMultiple: true
+      documentation:
+        propertyTerm: core.documentation
+        range: CreativeWork
+      isAbstract:
+        propertyTerm: apiContract.isAbstract
+        range: boolean
+      headerExamples:
+        propertyTerm: apiContract.headerExamples
+        range: Example
+        allowMultiple: true
+      headerSchema:
+        propertyTerm: apiContract.headerSchema
+        range: NodeShape
+      designLink:
+        propertyTerm: doc.design-link-target
+        range: link
 
 
   ResourceType:
@@ -1805,8 +1936,13 @@ nodeMappings:
 
   Response:
     classTerm: apiContract.Response
-    extends: Message
+    extends: AbstractResponse
     mapping:
+      extends:
+        propertyTerm: doc.extends
+        range: Message
+        allowMultiple: true
+    
       statusCode:
         propertyTerm: apiContract.statusCode
         range: string
@@ -1814,6 +1950,56 @@ nodeMappings:
         propertyTerm: apiContract.link
         range: TemplatedLink
         allowMultiple: true
+      description:
+        propertyTerm: core.description
+        range: string
+      payload:
+        propertyTerm: apiContract.payload
+        range: Payload
+        allowMultiple: true
+      correlationId:
+        propertyTerm: core.correlationId
+        range: CorrelationId
+      displayName:
+        propertyTerm: core.displayName
+        range: string
+      title:
+        propertyTerm: core.title
+        range: string
+      summary:
+        propertyTerm: core.summary
+        range: string
+      header:
+        propertyTerm: apiContract.header
+        range: Parameter
+        allowMultiple: true
+      binding:
+        propertyTerm: apiBinding.binding
+        range: MessageBindings
+      tag:
+        propertyTerm: apiContract.tag
+        range: Tag
+        allowMultiple: true
+      examples:
+        propertyTerm: apiContract.examples
+        range: Example
+        allowMultiple: true
+      documentation:
+        propertyTerm: core.documentation
+        range: CreativeWork
+      isAbstract:
+        propertyTerm: apiContract.isAbstract
+        range: boolean
+      headerExamples:
+        propertyTerm: apiContract.headerExamples
+        range: Example
+        allowMultiple: true
+      headerSchema:
+        propertyTerm: apiContract.headerSchema
+        range: NodeShape
+      designLink:
+        propertyTerm: doc.design-link-target
+        range: link
 
 
   ScalarNode:
@@ -2139,6 +2325,59 @@ nodeMappings:
         propertyTerm: doc.designAnnotation
         range: DomainExtension
         allowMultiple: true
+
+
+  ShapeOperation:
+    classTerm: raml-shapes.Operation
+    extends: AbstractOperation
+    mapping:
+      expects:
+        propertyTerm: raml-shapes.expects
+        range: ShapeRequest
+        allowMultiple: true
+      returns:
+        propertyTerm: raml-shapes.returns
+        range: ShapeResponse
+        allowMultiple: true
+
+
+  ShapeParameter:
+    classTerm: raml-shapes.Parameter
+    extends: AbstractParameter
+    mapping:
+      paramName:
+        propertyTerm: raml-shapes.paramName
+        range: string
+      binding:
+        propertyTerm: raml-shapes.binding
+        range: string
+      required:
+        propertyTerm: raml-shapes.required
+        range: boolean
+
+
+  ShapePayload:
+    classTerm: raml-shapes.Payload
+    extends: AbstractPayload
+
+
+  ShapeRequest:
+    classTerm: raml-shapes.Request
+    extends: AbstractRequest
+    mapping:
+      parameter:
+        propertyTerm: raml-shapes.parameter
+        range: ShapeParameter
+        allowMultiple: true
+
+
+  ShapeResponse:
+    classTerm: raml-shapes.Response
+    extends: AbstractResponse
+    mapping:
+      payload:
+        propertyTerm: raml-shapes.payload
+        range: ShapePayload
 
 
   Tag:
