W-10674627: add isExtension field to shapes

--- a/vocabulary/src/main/resources/dialects/canonical_webapi_spec.yaml
+++ b/vocabulary/src/main/resources/dialects/canonical_webapi_spec.yaml
@@ -2303,6 +2303,9 @@ nodeMappings:
       deprecated:
         propertyTerm: raml-shapes.deprecated
         range: boolean
+      isExtension:
+        propertyTerm: raml-shapes.isExtension
+        range: boolean
       designLink:
         propertyTerm: doc.design-link-target
         range: link
