W-11415653 - Added new models associated with Json Schema Fragment

--- a/vocabulary/src/main/resources/dialects/canonical_webapi_spec.yaml
+++ b/vocabulary/src/main/resources/dialects/canonical_webapi_spec.yaml
@@ -1159,6 +1159,15 @@ nodeMappings:
         allowMultiple: true
 
 
+  JsonSchemaDocument:
+    classTerm: doc.JsonSchemaDocument
+    extends: Document
+    mapping:
+      SchemaVersion:
+        propertyTerm: doc.schemaVersion
+        range: string
+
+
   KafkaMessageBinding:
     classTerm: apiBinding.KafkaMessageBinding
     extends: MessageBinding
